2006-02-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfgbgview.c (gimp_fg_bg_view_expose): tweaked
	drawing of shadows.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* etc/sessionrc: set tab-style for dockables.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* configure.in: updated comments.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/Lighting/lighting_ui.c: use a check button instead of a
	toggle button.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mosaic.c: use a combo-box to select the tiling
	primitives.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/progress.pdb
	* libgimp/gimpprogress.[ch]: applied slightly modified patch from
	Stephane Chauveau.  Wraps the gimp_progress_update() PDB call so
	that redundant progress updates are suppressed in libgimp.  This
	gives a noticeable speedup for all plug-ins that update the
	progress too often (bug #331470).

	* libgimp/gimpprogress_pdb.[ch]: regenerated.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpplugin.c (gimp_plugin_icon_register): added a cast to
	get rid of a compiler warning.

2006-02-19  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't think we have Mac OS X TWAIN if on Win32.

2006-02-19  DindinX  <dindinx@gimp.org>

	* plug-ins/common/mosaic.c: applied a (slightly modified) patch from
	Esben Mose Hansen which add triangles as a tile type.

2006-02-19  Manish Singh  <yosh@gimp.org>

	* m4macros/binreloc.m4: introduce automake conditional USE_BINRELOC.

	* app/Makefile.am: ... and use the above here, so that -rpath is only
	specified when binreloc functionality is enabled. Fixes bug #331677.

2006-02-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gif.c (save_image): removed warning when reusing
	a color index for transparency. Shouldn't pose a problem for any
	GIF viewer and only confuses our users.

2006-02-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: added some const qualifiers and other
	minor cleanups.
