@@ -88,10 +88,10 @@ gimp_magnify_tool_register (GimpToolRegisterCallback  callback,
                 GIMP_TYPE_MAGNIFY_OPTIONS,
                 gimp_magnify_options_gui,
                 0,
-                "gimp-magnify-tool",
-                _("Magnify"),
+                "gimp-zoom-tool",
+                _("Zoom"),
                 _("Zoom in & out"),
-                N_("M_agnify"), "Z",
+                N_("_Zoom"), "Z",
                 NULL, GIMP_HELP_TOOL_ZOOM,
                 GIMP_STOCK_TOOL_ZOOM,
                 data);
